tests/error/implicit_inside.gw
#! [contains] while defining
class C {
  0 => var int i;
}
operator @implicit int(C c) {
  return c;
}

fun void test(int i){<<<i>>>;}
var C c;
c=>test;
